# FVMaker

./: .clang-format  .gitignore  AI_USAGE.md  CMakeLists.txt  LICENSE.md  README.md
Capitulos/Capitulo_02/Programa_21/: CMakeLists.txt  Programa_21.cpp
Capitulos/Capitulo_02/Programa_22/: CMakeLists.txt  Programa_22.cpp
Capitulos/Capitulo_03/Malhas/MalhasNaoUniformes/MalhaFronteira/: CMakeLists.txt  MalhaFronteira.cpp
FVMakerLib/: CMakeLists.txt
FVMakerLib/include/: FVMaker.h
FVMakerLib/include/FVMaker/Algebra/: DenseVector.h  ErrorNorms.h
FVMakerLib/include/FVMaker/BoundaryCondition/: BC.h  BCTrait.h  BoundaryCondition.h  Dirichlet.h  Neumann.h  Robin.h  bc.h  bcTrait.h  boundaryCondition.h  dirichlet.h  neumann.h  robin.h
FVMakerLib/include/FVMaker/Coefficient/: AbstractCoefficient .h  AbstractCoefficient.h  AbstractCoefficient.hpp  Coefficient.h  Coefficient1D.h  Coefficient1D.hpp  abstractCoefficient.h  abstractCoefficient.hpp  coefficient1D.h  coefficient1D.hpp
FVMakerLib/include/FVMaker/Core/: ID.h  StrongTypes.h  Types.h  Version.h
FVMakerLib/include/FVMaker/Equation/: Diffusion.h  Diffusion.hpp  Equation.h  Equation.hpp  diffusion.h  diffusion.hpp  equation.h  equation.hpp
FVMakerLib/include/FVMaker/Error/: FVMakerException.h
FVMakerLib/include/FVMaker/ErrorHandling/: ErrorCatalog.h  ErrorCodes.h  ErrorDescriptor.h  ErrorRecord.h  FVMException.h  ThrowError.h
FVMakerLib/include/FVMaker/Functions/: FunctionEvaluation1D.h  FunctionTypes.h  ManufacturedProblem1D.h  ManufacturedSolution1D.h  VariableCoefficient1D.h
FVMakerLib/include/FVMaker/Grid/: AbstractGrid.h  Grid.h  Grid.hpp  GridDimension.h  abstractGrid.h  gridDimension.h
FVMakerLib/include/FVMaker/Grid/Grid1D/: AbstractGrid1D.h  AbstractGrid1D.hpp  CartesianGrid1D.h  CartesianGrid1D.hpp  Grid1D.h  Grid1D.hpp  RMGrid1D.h  RMGrid1D.hpp  RandomGrid1D.h  RandomGrid1D.hpp  UniformGrid1D.h  abstractGrid1D.h  abstractGrid1D.hpp  randomGrid1D.h  randomGrid1D.hpp  uniformGrid1D.h
FVMakerLib/include/FVMaker/Grid/GridAnalysis/: CellSizeAnalyser1D.h  CellSizeAnalyser1D.hpp  GridAnalyser.h  GridReport.h  SmoothnessAnalyser1D.h  SmoothnessAnalyser1D.hpp  SpacingRatioAnalyser1D.h  SpacingRatioAnalyser1D.hpp  UniformityAnalyser1D.h  UniformityAnalyser1D.hpp  gridAnalyser.h  gridReport.h
FVMakerLib/include/FVMaker/Grid/GridPattern/: AbstractGrid1111.h  AbstractGridPattern.h  CellCentered.h  FaceCentered.h  GridPattern.h  abstractGridPattern.h  cellCentered.h  faceCentered.h
FVMakerLib/include/FVMaker/Misc/: Configure.h  Misc.h  ParallelControl.h  configure.h  misc.h  namespace.h  parallelControl.h  type.h
FVMakerLib/include/FVMaker/OneDimensional/Advection/: Advection1D.h  FaceFlux1D.h  Interpolation1D.h
FVMakerLib/include/FVMaker/OneDimensional/Assembly/: Assembler1D.h
FVMakerLib/include/FVMaker/OneDimensional/Boundary/: BoundaryCondition1D.h  GhostBoundary1D.h  GhostCells1D.h
FVMakerLib/include/FVMaker/OneDimensional/Coefficient/: DiffusionCoefficient1D.h  NonlinearCoefficient1D.h
FVMakerLib/include/FVMaker/OneDimensional/Equation/: Equation1D.h
FVMakerLib/include/FVMaker/OneDimensional/Field/: Field1D.h  FieldView1D.h
FVMakerLib/include/FVMaker/OneDimensional/Grid/: GridMetrics1D.h  GridView1D.h
FVMakerLib/include/FVMaker/OneDimensional/Operator/: DiffusionOperator1D.h  Laplacian1D.h
FVMakerLib/include/FVMaker/OneDimensional/Solver/: BiCG.h  BiCGSTAB.h  ConjugateGradient.h  GaussSeidel.h  Jacobi.h  LinearSolverOptions1D.h  NonlinearSolve1D.h  SolveController1D.h  TDMA.h
FVMakerLib/include/FVMaker/OneDimensional/Source/: LinearizedSource1D.h
FVMakerLib/include/FVMaker/OneDimensional/System/: AlgebraicResidual1D.h  EquationContribution1D.h  PentadiagonalSystem1D.h  TridiagonalSystem1D.h
FVMakerLib/include/FVMaker/OneDimensional/Term/: Terms1D.h
FVMakerLib/include/FVMaker/OneDimensional/Variable/: Variable1D.h
FVMakerLib/include/FVMaker/Output/VTK/: Variable1DVTKWriter.h
FVMakerLib/include/FVMaker/Roadmap/: FakeBlocks.h
FVMakerLib/include/FVMaker/Solver/: IterativeSolverOptions.h  PicardIteration.h  SolveResult.h  SteadyState.h  StopCriteria.h
FVMakerLib/include/FVMaker/SourceTerm/: SourceTerm.h  SourceTerm.hpp  sourceTerm.h  sourceTerm.hpp
FVMakerLib/include/FVMaker/Utilities/: Function.h  function.h
FVMakerLib/include/FVMaker/Variable/: Variable.h  variable.h
FVMakerLib/src/Error/: FVMakerException.cpp
FVMakerLib/src/FVMaker/: FVMaker.cc
FVMakerLib/src/FVMaker/Algebra/: DenseVector.cc  ErrorNorms.cc
FVMakerLib/src/FVMaker/Core/: ID.cc  Version.cc
FVMakerLib/src/FVMaker/ErrorHandling/: FVMException.cc  ThrowError.cc
FVMakerLib/src/FVMaker/OneDimensional/Advection/: Advection1D.cc  FaceFlux1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Assembly/: Assembler1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Boundary/: BoundaryCondition1D.cc  GhostBoundary1D.cc  GhostCells1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Coefficient/: DiffusionCoefficient1D.cc  NonlinearCoefficient1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Equation/: Equation1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Field/: Field1D.cc  FieldView1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Grid/: GridView1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Operator/: DiffusionOperator1D.cc  Laplacian1D.cc
FVMakerLib/src/FVMaker/OneDimensional/Solver/: BiCG.cc  BiCGSTAB.cc  ConjugateGradient.cc  GaussSeidel.cc  Jacobi.cc  LinearSolverOptions1D.cc  NonlinearSolve1D.cc  TDMA.cc
FVMakerLib/src/FVMaker/OneDimensional/Source/: LinearizedSource1D.cc
FVMakerLib/src/FVMaker/Solver/: SteadyState.cc  StopCriteria.cc
FVMakerLib/src/Grid/: Grid.cpp
FVMakerLib/src/Grid/Grid1D/: RMGrid1D.cpp  UniformGrid1D.cpp  uniformGrid1D.cpp
FVMakerLib/src/Grid/GridPattern/: CellCentered.cpp  FaceCentered.cpp  GridPattern.cpp  cellCentered.cpp  faceCentered.cpp
FVMakerLib/src/Misc/: Misc.cpp  misc.cpp
antigos/capitulos/Capitulo_103b/Exemplo_34/: CMakeLists.txt  Exemplo_34.cpp
capitulos/Capitulo_03b/: CMakeLists.txt
capitulos/Capitulo_103b/Exponencial/: CMakeLists.txt
cmake/: ConfigCompiler.cmake  (+8 more)
(+388 files in other folders)
